# AdaptivePerfHTML

./: .gitignore  .gitlab-ci.yml  .gitmodules  Dockerfile  LICENSE  README.md  app.py  js_setup.py  js_setup.sh  perf-script.py  pyproject.toml  requirements.txt  requirements_server.txt  results.py
src/adaptiveperf/: __init__.py  app.py  cli.py  html.py  perf_script.py  results.py
src/adaptiveperf/static/: viewer.js  vis-timeline-graph2d.min.js
src/adaptiveperf/templates/: viewer.html
src/wasm/: main.cpp  tree_parse.cpp  tree_parse.hpp
templates/: viewer.html
test/: test_html.py  test_identifier.py  test_perf_script.py  test_profiling_results.py
test/adaptiveperf_results/2023_12_21_12_49_57_test-device a.out/: event_dict.data  new_proc_callchains.data  offcpu.data  syscalls.data
test/adaptiveperf_results/2023_12_21_12_49_57_test-device a.out/processed/: 23544_23544_sampled_time.data  23562_23562_sampled_time.data  23562_23563_sampled_time.data  23562_23564_sampled_time.data  23562_23567_sampled_time.data  23568_23568_sampled_time.data
